[package]
name = "lf_blog"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = { version = "4.4", default-features = false, features = ["macros", "compress-brotli", "compress-gzip", "cookies", "http2"] }
actix-files = "0.6"
tokio = { version = "1.35", features = ["full"] }

# Use rustls instead of OpenSSL for TLS
actix-tls = { version = "3.3", features = ["rustls-0_21"] }

# Template engine
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Markdown parsing
pulldown-cmark = "0.10"
serde_yaml = "0.9"

# File system
walkdir = "2.4"
notify = "6.1"

# Async utilities
futures = "0.3"

# Logging
env_logger = "0.11"
log = "0.4"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Compression for admin uploads
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
actix-multipart = "0.6"
futures-util = "0.3"

# Database for comments
rusqlite = { version = "0.30", features = ["bundled"] }

# UUID for generating IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# HTTP client (for preview)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Configuration
toml = "0.8"
dirs = "5.0"
urlencoding = "2.1"
clap = { version = "4.4", features = ["derive"] }